# kickoff.fun

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.base.json  turbo.json
.claude/agents/: anchor-auditor.md
.claude/skills/kick-contract/: SKILL.md
.claude/skills/privy/: SKILL.md
apps/ingest/: package.json  tsconfig.json
apps/ingest/scripts/: test-props.ts
apps/ingest/src/: db.ts  env.ts  main.ts  normalize.ts  props.ts  sim.ts
apps/web/: next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/app/: claim-pot.tsx  create-terrace.tsx  (+3 more)
apps/web/src/lib/: auth.tsx  format-kickoff.ts  identity.ts  invite.ts  persona.ts  rooms-server.ts  supabase-admin.ts  supabase.ts  team-code.ts  use-fixtures.ts  use-history.ts  use-terrace.ts
docs/: PRD.md
docs/design/: BRAND.md  DESIGN_GUIDE.md
docs/technical/: ARCHITECTURE.md  ERD.md  INTEGRATIONS.md  SMART-CONTRACT.md  TECH-STACK.md
programs/kick-settlement/: Cargo.toml
programs/kick-settlement/src/: errors.rs  events.rs  lib.rs  merkle.rs  state.rs  txoracle.rs
programs/kick-settlement/src/instructions/: admin.rs  cancel_room.rs  claim_pot.rs  close_room.rs  fund_pot.rs  init_room.rs  mod.rs  settle_room.rs
scripts/: backfill-finals.ts  e2e-devnet.ts  init-config.ts  probe-gamestate.ts  probe-scores.ts  seed-fixtures.ts  verify-claim-api.ts
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 0001_init.sql  0002_room_name.sql
(+14 files in other folders)
